added articles found block

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
   <h1>chickienickienews</h1>
+
+  <div id="articles_found">
+    <p>There were <span id="articles_found_number">5</span> articles found.</p>
+  </div>
   
   <script src="app.js" type="module"></script>
 </body>
